<resources>
    <string name="app_name">app-1</string>
    <string name="img">img</string>
    <string name="grow_nyour_business">GROW\nYOUR BUSINESS</string>
    <string name="we_will_help_you_to_grow_your_business_using_nonline_server">We will help you to grow your business using\nonline server</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="how_we_work">HOW WE WORK?</string>
</resources>